add APA 6th & TOC

--- a/index.Rmd
+++ b/index.Rmd
@@ -5,11 +5,20 @@ team: "bilby"
 author:
   - "Yuheng Cui"
   - "Jimmy Effendy"
+  - "Weihao Li"
+  - "Yan Ma"
 date: "`r Sys.Date()`"
-output: 
-  bookdown::html_document2
+output:
+  bookdown::html_document2:
+    citation_package: biblatex
+    number_sections: yes
+    theme: cerulean
+    toc: yes
+    toc_float:
+      collapsed: yes
+csl: apa-6th-edition.csl
 bibliography: reference.bib
-biblio-style: authoryear-comp
+link-citations: yes
 ---
 
 [This assignment is for ETC5521 Assignment 1 by Team `r rmarkdown::metadata$team` comprising of `r knitr::combine_words(rmarkdown::metadata$author)`.]{style="color:#006DAE;"}
