--- a/reference.bib
+++ b/reference.bib
@@ -1,4 +1,4 @@
-  @Article{visdat,
+﻿  @Article{visdat,
     title = {visdat: Visualising Whole Data Frames},
     author = {Nicholas Tierney},
     doi = {10.21105/joss.00355},
@@ -218,3 +218,11 @@
     isbn = {9781138331457},
     url = {https://plotly-r.com},
   }
+
+@misc{Tidy-Tuesday,
+  title = {A weekly social data project in R},
+  howpublished = {\url{https://github.com/rfordatascience/tidytuesday}},
+  note = {Accessed: 2020-08-24},
+  year = {2020},
+  author = {{Tidy Tuesday}}
+}
