--- a/index.Rmd
+++ b/index.Rmd
@@ -398,29 +398,78 @@ ggplotly(accidents_insurance_fig)
 
 # What are characteristics of body part injured? Is there any improvement in preventing serious injuries? 
 
-# State level analysis
-## The states with the most amusement park injuries
-Analyse the safer_parks data by state, find the states with the most amusement park injuries from 1/1/2011 to 9/9/2016.
+# What amusement parks have most injuries in Texas?
 
-```{r state-city-injuries}
-safer_parks %>% 
-  group_by(acc_city, acc_state) %>% 
-  summarise(total_injuries = sum(num_injured)) %>% 
-  arrange(desc(total_injuries)) %>% 
-  head(10) %>% 
-  kable(caption = "Cities with the most amusement park injuries", booktabs = T) %>% 
-  column_spec(3, width = "6cm") %>%
-  kable_styling(full_width = FALSE, latex_options = c("striped", "hold_position"))
+Since the injury reporting mechanism varies from state to state, we only analysed the injuries in each park in Texas (assuming that the injury reporting mechanism is the same across parks in Texas). We want to analyse not only the injuries happened every year in each park, but also the total injuries accross all the years in each park, so we also kept the injury records with missing injury_year values. Figure \@ref(fig:texas-parks-injuries) shows the top 10 amusement parks which have the most injuries in Texas. We can see that the Typhoon Texas - Austin park has the most amusement park injuries in Texas. The Skygroup Investments LLC DBA iFly Houston Memorial	park had a significant large number of injuries in 2015, while the Typhoon Texas Water Park had lots of injuries in 2016.
+
+```{r texas-parks-injuries, fig.align='center', fig.cap="Amusement Park Injuries Ranking in Texas"}
+library(rlist)
+
+tx_injuries_top <- tx_injuries %>% 
+  mutate(name_of_operation = replace(name_of_operation, 
+                                     name_of_operation == "TYPHOON TEXAS ‐ AUSTIN", 
+                                     "Typhoon Texas - Austin")) 
+
+tx_injuries_top10 <- tx_injuries_top %>%
+  group_by(name_of_operation) %>% 
+  summarise(total_injury = sum(injury_report_rec)) %>% 
+  arrange(desc(total_injury)) %>% 
+  head(10)
+
+injury_top_parks_tx <- as.list(unique(tx_injuries_top10$name_of_operation))
+
+tx_injuries_top %>% 
+  filter(name_of_operation %in% c(injury_top_parks_tx)) %>% 
+  mutate(injury_year = as.factor(injury_year)) %>% 
+  group_by(name_of_operation, injury_year) %>% 
+  summarise(total_injury = sum(injury_report_rec)) %>% 
+  ggplot(aes(x = factor(name_of_operation, level = list.reverse(injury_top_parks_tx)), 
+             y = total_injury,
+             fill = injury_year)) + 
+  geom_col() + 
+  coord_flip() + 
+  xlab("Park Name") + 
+  ylab("Injuries") + 
+  labs(fill = "Year") + 
+  ggtitle("Amusement Parks with Most Injuries in Texas")
 ```
 
-## The most dangerous ride in each state
-Find out the most dangerous ride in each state, displaying the number of injuries and the manufacturer name. This could remind people to avoid the most dangerous ride in their state, and we can further analyse which manufacturer's products caused more injuries over the years.
+# What manufacturer's product caused the most amusement park injuries?
+In this part, we will find out the manufacturers whose products caused most amusement injuries over the years. This could remind amusement parks have devices from these manufacturers to maintain their devices carefully. Figure \@ref(fig:manufacturer-plot) shows the top 10 manufacturers whose products caused most amusement injuries over the years and the percentage of total injuries recorded in the safer_park data set.
+
+There are 254 manufacturers' records in this data set, and the total injuries of them is 8793, while the total injuries of the top 10 manufacturers is 2841. The top 10 manufacturers accounted for 32.3% of all amusement park injuries. It' is worth's noteworthy that in-house manufactured devices accounts for more than 10% of total injuries.
 
 ```{r manufacturer}
-safer_parks %>% 
+manufacturers <- safer_parks %>% 
   group_by(manufacturer) %>% 
-  summarise(total_injuries_manu = sum(num_injured)) %>% 
-  arrange(desc(total_injuries_manu))
+  summarise(total_injuries = sum(num_injured)) %>% 
+  arrange(desc(total_injuries)) %>% 
+  head(10) 
+
+manufacturers %>% 
+  summarise(n = sum(total_injuries)) %>% 
+  pull() -> top_manu_injuries
+
+injuries_all_manu <- sum(safer_parks$num_injured, na.rm = TRUE)
+
+count_manufacturer <- length(unique(safer_parks$manufacturer))
+
+manufacturers <- manufacturers %>% 
+  mutate(percentage = total_injuries / injuries_all_manu)
+```
+
+```{r manufacturer-plot, fig.align='center', fig.cap="Top 10 Manufacturers with Most Injuries"}
+manufacturers %>% 
+  ggplot(aes(x = manufacturer)) + 
+  geom_col(aes( y = total_injuries, fill = manufacturer)) + 
+  geom_line(aes( y = percentage * 10000, group = 1, color = "red")) + 
+  geom_text(aes( y = percentage * 10000, label = round(percentage * 100, 2)), vjust = -0.2, size = 3) + 
+  scale_y_continuous(name = "Injuries by Manufacturer", 
+                     sec.axis = sec_axis(name = "Percentage of Total Injuries", 
+                                         trans = ~ . / 100)) + 
+  theme(axis.text.x = element_text(angle = 90), 
+        legend.position = "none") + 
+  ggtitle("Manufacturers Caused Most Injuries")
 ```
 
 
